Version 0.4.5 (?? ??? ????)
 - Bug fix for CalendarPanel: today button was showing wrong week during last week
   of year.
Version 0.4.4 (12 Dec 2007)
 - Fixed generated iCalendar output for RRULEs.  Added simple constructor for
   Rrule class.
Version 0.4.3 (20 Sep 2007)
 - Added support for attachments using iCalendar ATTACH.  Added Apache
   Commons Codec library (for base64 encoding/decoding).
 - Added new getNamedAttribute method to all Property classes
 - Performance improvements for parsing data with very long folded
   lines, such as inline attachments.
Version 0.4.2 (01 Aug 2007)
 - Added support for STATUS field in Event and Journal classes.
 - CalendarPanel changes:
   + Added different background for today's date
   + Added "Today" button to bring display back to current date
   + Allow for overriding background color drawing
Version 0.4.1 (12 Jun 2007)
 - Modified CalendarPanel code to work with Java 1.2 (removed generics)
 - Added new CSVParser to parse CSV calendar data created from MS Outlook.
Version 0.4.0 (11 Jun 2007)
 - Added new CalendarPanel Swing GUI component to package.
 - Updated build.xml with new targets for packaging source ("source-zip"),
   building javadoc HTML files ("javadoc").
Version 0.3.0 (30 May 2007)
 - Added Google's RRULE java implementation for generating recurrance dates.
 - Numerous bugfixes for recurrance (RRULE)
 - Added getDayOfWeek, getFirstDayOfWeekForYear, getLastDayOfWeekForYear
   to Utils class
 - Added getWeekOfYear, getDayOfYear, getDayOfWeek, isBefore, isAfter
   methods to Date object
 - Added setUserData/getUserData methods to Event class
 - Added support for timezones for all date objects by including
   Joda Time (www.joda.org)
 - Added support for comment and location for events.
 - Fixed duration in event
Version 0.2.6 (24 Apr 2007)
  - k5njournal changes:
    + replaced "Clear" button for text search with graphic icon
Version 0.2.5 (24 Apr 2007)
  - k5njournal changes:
    + Added text search filter